infra/k3s/apps/kustomize/overlays/dev/backend-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-backend
spec:
  template:
    spec:
      containers:
        - name: weather-backend
          resources:
            requests:
              memory: 128Mi
              cpu: 200m
      volumes:
        - name: sqlitedb
          nfs:
            server: nfs.jrzylab.xyz
            path: /data/app_data/weather-app/dev
            readOnly: false
