infra/k3s/apps/kustomize/overlays/dev/frontend-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-frontend
spec:
  template:
    spec:
      containers:
        - name: weather-frontend
          resources:
            requests:
              memory: 128Mi
              cpu: 200m
