infra/k3s/apps/kustomize/overlays/dev/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weather
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: dev-weather-middleware-strip-prefix@kubernetescrd
